--- a/src/Components/HomePage/HomePage.css
+++ b/src/Components/HomePage/HomePage.css
@@ -40,8 +40,8 @@
 
 .swiper-container{
     margin-top: 15px;
-    width: 1300px;
-    height: 500px;
+    width: 1200px;
+    height: 450px;
 }
 
 .slide-number {
@@ -55,5 +55,52 @@
     border-radius: 20px;
     font-size: 14px;
   }
+  .data-list {
+    margin-top: 20px;
+    padding: 0 15px;
+  }
+  
+  .data-list h2 {
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
   
   
+  .data-list li {
+    flex: 1 1 calc(25% - 10px); /* 25% width minus margin */
+   
+    padding: 10px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+  
+  .list-item h3 {
+    text-align: center;
+    font-size: 20px;
+    margin: 0;
+    color: #333;
+  }
+  
+  .list-item p {
+    margin: 5px 0;
+    color: #666;
+  }
+
+  .list-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    height: 300px;
+  }
+  
+  .list-container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    
+  }
+
