--- a/src/Components/HomePage/HomePage.css
+++ b/src/Components/HomePage/HomePage.css
@@ -1,14 +1,20 @@
 .homepage{
     width: 100%;
     height: 100vh;
-    background-color: #f8f8f8;
+    background-color: #ffffff;
 }
-.header-homepage{
-    display: flex;
-    align-items: center;
-    padding: 15px;
-    background-color: #fff;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+
+.header-homepage {
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 4px 4px;
+  background-color: #ffffff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000; /* Đảm bảo header nằm trên các phần tử khác */
 }
 
 .trangchu{
@@ -39,7 +45,7 @@
   }
 
 .swiper-container{
-    margin-top: 15px;
+    margin-top: 90px;
     width: 1200px;
     height: 450px;
 }
@@ -56,30 +62,35 @@
     font-size: 14px;
   }
   .data-list {
-    margin-top: 20px;
     padding: 0 15px;
+    background-color: #ffffff;
   }
   
   .data-list h2 {
     text-align: center;
     font-size: 24px;
     margin-bottom: 10px;
+    margin-top: 0px;
+    padding: 20px 0 15px 0;
   }
   
   
   .data-list li {
-    flex: 1 1 calc(25% - 10px); /* 25% width minus margin */
-   
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: calc(20% - 10px);
     padding: 10px;
     border: 1px solid #ccc;
     box-sizing: border-box;
+    margin: 0 20px 32px 20px;
+    box-shadow: 0 4px 8px #f7ba62; /* Đổ bóng màu hồng */
   }
   
   .list-item h3 {
     text-align: center;
-    font-size: 20px;
-    margin: 0;
+    font-size: 16px;
     color: #333;
+    margin: 8px 0 0 0;
   }
   
   .list-item p {
@@ -101,10 +112,14 @@
     align-items: center;
     padding: 0;
     margin: 0;
-    
   }
 
   .list-item img{
     width: 200px;
     height: 200px;
+    transition: transform 0.6s ease;
+  }
+
+  .list-item:hover img {
+    transform: scale(1.1);
   }
