--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,22 +1,27 @@
-.header-homepage{
+.header-homepage {
     display: flex;
     align-items: center;
     padding: 15px;
-    background-color: #fff;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-}
-
-.trangchu{
-    font-size: 30px;
-    margin-right: 300px;
-    align-items: center;
-    font-weight: bold;
-}
-
-.category{
-    font-size: 20px;
-    margin-right: 50px;
-    font-weight: bold;
-    font-family: "Roboto", sans-serif;
-    align-items: center;
-}
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 4px 4px;
+    background-color: #ffffff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000; /* Đảm bảo header nằm trên các phần tử khác */
+  }
+  
+  .trangchu{
+      font-size: 30px;
+      margin-right: 300px;
+      align-items: center;
+      font-weight: bold;
+  }
+  
+  .category{
+      font-size: 20px;
+      margin-right: 50px;
+      font-weight: bold;
+      font-family: "Roboto", sans-serif;
+      align-items: center;
+  }
