--- a/src/Components/PostProduct/PostProduct.css
+++ b/src/Components/PostProduct/PostProduct.css
@@ -1,3 +1,86 @@
-.post-product-content h2{
+.post-product-container h2{
+    margin-top: 100px;
+    text-align: center;
+    width: 100%;
+}
 
+.post-product-content{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.post-product-form {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 400px;
+    padding: 25px;
+    margin: auto;
+    justify-content: space-between;
+    border-radius: 10px;
+    background-color: #ffffff;
+    margin-left: 0px;
+  }
+  
+  .post-product-form label {
+    margin-bottom: 5px;
+  }
+
+  .post-product-form input{
+    height: 30px;
+    margin-bottom: 10px;
+  }
+
+  .post-product-form select{
+    height: 30px;
+    margin-bottom: 10px;
+  }
+
+  .post-product-form button {
+    margin-top: 20px;
+    align-self: center;
+    width: 200px;
+    height: 40px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .post-product-form button:hover {
+    background-color: #2f9334;
+  }
+
+  .post-img {
+    width: 500px;
+    height: 400px;
+    margin: 40px 20px 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    border-radius: 10px;
+  }
+  
+  .post-img input[type='file'] {
+    position: absolute;
+    width: 500px;
+    height: 400px;
+    opacity: 0;
+    cursor: pointer;
+  }
+  
+  .selected-image {
+    max-width: 500px;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+
+  input[type="text"],
+input[type="number"] {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
