--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,7 +6,7 @@ body {
 }
 
 footer {
-    background-color: #b1b1b1;
+    background-color: #efefef;
     color: #000000;
     padding: 20px 20px 23px 20px;
     text-align: left;
