--- a/src/Components/PostProduct/PostProduct.css
+++ b/src/Components/PostProduct/PostProduct.css
@@ -21,10 +21,6 @@
     background-color: #ffffff;
     margin-left: 0px;
   }
-  
-  .post-product-form label {
-    margin-bottom: 5px;
-  }
 
   .post-product-form input{
     height: 30px;
@@ -32,7 +28,7 @@
   }
 
   .post-product-form select{
-    height: 30px;
+    height: 45px;
     margin-bottom: 10px;
   }
 
@@ -41,15 +37,16 @@
     align-self: center;
     width: 200px;
     height: 40px;
-    background-color: #4CAF50;
+    background-color: #f80;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 17px;
   }
   
   .post-product-form button:hover {
-    background-color: #2f9334;
+    background-color: rgb(255, 191, 117);
   }
 
   .post-img {
@@ -83,4 +80,22 @@ input[type="number"] {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+}
+
+input[type="text"], select {
+  width: 100%;
+  height: 45px;
+  padding: 8px 10px;
+  margin: 5px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+/* Styling for labels */
+label {
+  margin-top: 10px;
+  display: inline-block;
+  font-weight: bold;
 }
