--- a/src/Components/UploadImage/UploadImage.css
+++ b/src/Components/UploadImage/UploadImage.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 600px;
-    height: 400px;
+    height: 490px;
     border: 2px dashed orange;
     position: relative;
     margin: 40px 10px 0 auto;
@@ -46,6 +46,7 @@
     color: orange;
     font-size: 48px;
     margin-bottom: 10px;
+    margin-right: 10px;
   }
   
   .upload-text {
