--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -17,6 +17,8 @@
       align-items: center;
       font-weight: bold;
       cursor: pointer;
+      text-decoration: none;
+      color: black;
   }
   
   .category{
@@ -26,6 +28,8 @@
       font-family: "Roboto", sans-serif;
       align-items: center;
       cursor: pointer;
+      text-decoration: none;
+      color: black;
   }
 
   .category:hover{
@@ -45,3 +49,4 @@
 .user:hover{
   color: #ffffff;
 }
+
