--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,9 +1,9 @@
 .header-homepage {
     display: flex;
     align-items: center;
-    padding: 15px;
+    padding: 0 0 0 36px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 4px 4px;
-    background-color: #ffba00;
+    background-color: #ffffff;
     position: fixed;
     top: 0;
     left: 0;
@@ -20,6 +20,11 @@
       text-decoration: none;
       color: black;
   }
+
+  .trangchu img{
+    width: 74px;
+    height: 57px;
+  }
   
   .category{
       font-size: 20px;
@@ -33,7 +38,7 @@
   }
 
   .category:hover{
-    color: #ffffff;
+    color: #ffba00;
   }
 
   .trangchu:hover{
