--- a/src/Components/HomePage/HomePage.css
+++ b/src/Components/HomePage/HomePage.css
@@ -16,8 +16,8 @@
   }
 
 .swiper-container{
-    margin-top: 90px;
-    width: 1200px;
+    margin-top: 65px;
+    width: 100%;
     height: 450px;
 }
 
