--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -13,7 +13,7 @@
   
   .trangchu{
       font-size: 30px;
-      margin-right: 300px;
+      margin-right: 40px;
       align-items: center;
       font-weight: bold;
       cursor: pointer;
@@ -30,7 +30,7 @@
       font-size: 20px;
       margin-right: 50px;
       font-weight: bold;
-      font-family: "Roboto", sans-serif;
+      font-family: monospace;
       align-items: center;
       cursor: pointer;
       text-decoration: none;
