--- a/src/Components/HomePage/HomePage.css
+++ b/src/Components/HomePage/HomePage.css
@@ -37,14 +37,38 @@
     background-color: #ffffff;
   }
   
-  .data-list h2 {
-    text-align: center;
-    font-size: 24px;
-    margin-bottom: 10px;
-    margin-top: 0px;
-    padding: 20px 0 15px 0;
+  /* .data-list h2 {
+    font-size: 31px;
+    margin: 17px 23px 6px 19px;
+    padding: 3px 0 4px 4px;
+    font-family: monospace;
+    background-color: #fff1e8;
+  } */
+  
+  .header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 17px 17px 6px 19px;
+    padding: 3px 6px 4px 4px;
+    background-color: #fff1e8;
+    font-family: monospace;
+  }
+  .header-container h2{
+    font-size: 31px;
+    margin: 0;
   }
   
+  .view-more-link {
+    font-size: 16px;
+    color: black;
+    text-decoration: none;
+    margin-right: 7px;
+  }
+  
+  .view-more-link:hover {
+    text-decoration: underline;
+  }
   
   .data-list li {
     flex-grow: 1;
