--- a/src/Components/HomePage/HomePage.css
+++ b/src/Components/HomePage/HomePage.css
@@ -75,10 +75,10 @@
     flex-shrink: 1;
     flex-basis: calc(20% - 10px);
     padding: 10px;
-    border: 1px solid #ccc;
+    border-radius: 12px;
     box-sizing: border-box;
     margin: 0 20px 32px 20px;
-    box-shadow: 0 4px 8px #f7ba62; /* Đổ bóng màu hồng */
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; /* Đổ bóng màu hồng */
   }
   
   .list-item h3 {
@@ -93,12 +93,15 @@
     color: #666;
   }
 
+
+
   .list-item{
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 300px;
-    height: 300px;
+    height: fit-content;
+    cursor: pointer;
   }
   
   .list-container{
@@ -109,11 +112,20 @@
     margin: 0;
   }
 
+  .img-container{
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+  }
+
   .list-item img{
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     transition: transform 0.6s ease;
   }
+
+  
 
   .list-item:hover img {
     transform: scale(1.1);
