--- a/src/Components/LoginSignUp/LoginSignup.css
+++ b/src/Components/LoginSignUp/LoginSignup.css
@@ -40,8 +40,8 @@
     display: flex;
     align-items: center;
     margin: auto;
-    width: 480px;
-    height: 80px;
+    width: 350px;
+    height: 50px;
 
     background: #dbd6d6;
     border-radius: 6px;
@@ -53,7 +53,7 @@
 
 .input input{
     height: 50px;
-    width: 400px;
+    width: 40px;
     background: transparent;
     border: none;
     outline: none;
@@ -62,10 +62,11 @@
 }
 
 .forgot-password{
-    padding-left: 62px;
+    padding-left: 22px;
     margin-top: 27px;
     color: #797979;
-    font-size: 18px;
+    font-size: 15px;
+    
 }
 
 .forgot-password span{
@@ -84,7 +85,7 @@
     justify-content: center;
     align-items: center;
     width: 220px;
-    height: 59px;
+    height: 29px;
     color: #fff;
     background: #edbb24;
     border-radius: 50px;
@@ -100,7 +101,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+   
     background-color: rgba(0, 0, 0, 0.4); /* Màu nền tối */
     display: flex;
     justify-content: center;
@@ -112,10 +113,12 @@
     margin: 5% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 400px;
+    height: 560px;
     max-width: 500px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     position: relative;
+    border-radius: 32px;
   }
   
   .close {
@@ -152,12 +155,6 @@
     margin-right: 10px;
   }
   
-  .input input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
   
   .forgot-password {
     text-align: center;
@@ -185,3 +182,21 @@
     background-color: #0056b3;
   }
   
+  .google-login {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .google-login button {
+    background-color: #4285F4;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  .google-login button:hover {
+    background-color: #357ae8;
+  }
