--- a/src/Components/HomePage/HomePage.css
+++ b/src/Components/HomePage/HomePage.css
@@ -51,7 +51,7 @@
     align-items: center;
     margin: 17px 17px 6px 19px;
     padding: 3px 6px 4px 4px;
-    background-color: #fff1e8;
+    /* background-color: #fff1e8; */
     font-family: monospace;
   }
   .header-container h2{
@@ -145,7 +145,7 @@
 
   .right-column {
       flex: 4;
-      padding: 20px 10px 10px 10px;
+      padding: 20px 0px 10px 10px;
       text-align: right;
       font-weight: bold;
       font-size: 18px;
@@ -160,7 +160,8 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: medium;
+    font-size: 18px;
+    width: 140px;
   }
 
   .buy-button:hover {
