--- a/src/Components/ProductDetail/ProductDetail.css
+++ b/src/Components/ProductDetail/ProductDetail.css
@@ -6,8 +6,9 @@
 .product-content {
   display: flex;
   justify-content: space-between;
-  width: 93%;
+  width: 100%;
   margin: 85px 0 24px 0;
+  height: 700px;
 }
 
 .product-images {
@@ -18,6 +19,11 @@
   align-items: center;
   width: 300px;
   height: 300px;
+}
+.thumbnail img{
+  width: 350px;
+  height: 350px;
+  object-fit: cover;
 }
 
 .product-info {
