--- a/src/Components/LoginSignUp/LoginSignup.css
+++ b/src/Components/LoginSignUp/LoginSignup.css
@@ -143,6 +143,11 @@
   background-color: #dd4b39;
   width: 340px;
   border-radius: 25px;
+  width: 350px;
+  height: 50px;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 700;
 }
 .login:hover{
   background-color: #a73b2d;
