--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -78,7 +78,7 @@
     font-weight: 600;
     font-size: 15px;
     height: 50px;
-    background-color: #ebe7e7;
+    background-color: #f1b337;
     cursor: pointer;
   }
 
@@ -109,6 +109,7 @@
    text-align: center;
    height: 30px;
    border-radius: 10px;
+   cursor: pointer;
 }
 
 .created-profile:hover{
