--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -48,10 +48,26 @@
     font-size: 20px;
     margin-right: 50px;
     font-weight: bold;
-    font-family: "Roboto", sans-serif;
+    font-family: monospace;
     align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
 }
 .user:hover{
-  color: #ffffff;
+  color: #ffba00;
+}
+.financial{
+  font-size: 20px;
+    margin-right: 50px;
+    font-weight: bold;
+    font-family: monospace;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+}
+.financial:hover{
+  color: #ffba00;
 }
 
