--- a/src/Pages/Admin/FinancialPage/financial.page.css
+++ b/src/Pages/Admin/FinancialPage/financial.page.css
@@ -14,3 +14,9 @@
     margin-bottom: 10px;
     margin-left: 20px;
 }
+.h1ticket {
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    color: #d5622d;
+}
