--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -153,12 +153,13 @@
   align-items: center;
   justify-content: space-between;
   height: fit-content;
+  
 }
 
 .img-container-profile{
     width: 100%;
     height: 400px;
-    overflow: hidden;
+    transition: transform 0.6s ease;
 }
 
 .img-container-profile img {
@@ -166,6 +167,15 @@
   height: 100%;
   object-fit: cover;
   border-radius: 8px;
+  
+}
+
+.img-overflow{
+  overflow: hidden;
+}
+
+.img-container-profile:hover{
+  transform: scale(1.1);
 }
 
 .detail-container-profile {
