--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -146,19 +146,18 @@
   width: 310px;
   padding: 16px;
   display: flex;
-  flex-grow: 1;
   flex-basis: calc(20% - 10px);
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   height: fit-content;
-  
 }
 
 .img-container-profile{
     width: 100%;
     height: 400px;
     transition: transform 0.6s ease;
+
 }
 
 .img-container-profile img {
@@ -171,6 +170,7 @@
 
 .img-overflow{
   overflow: hidden;
+  border-radius: 40px;
 }
 
 .img-container-profile:hover{
