--- a/src/Components/LoginSignUp/LoginSignup.css
+++ b/src/Components/LoginSignUp/LoginSignup.css
@@ -120,7 +120,7 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0, 0, 0, 0.5); /* Black w/ opacity */
+  background-color: #ff9a02; /* Black w/ opacity */
 }
 
 .modal-content {
@@ -218,4 +218,39 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.login-page-google-button {
+  background-color: #fff;
+  color: #000;
+  border: 0.5px solid #000;
+  border-radius: 25px;
+  padding: 10px 20px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  width: 75%;
+  height: 50px;
+  margin : auto;
+  font-weight: bold;
+}
+
+.login-page-google-button:hover {
+  background-color: red;  
+}
+
+.login-page-form-button  {
+  background-color: #ff9a02;
+  color: white;
+  border-radius: 25px;
+  padding: 10px 20px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  width: 75%;
+  height: 50px;
+  margin : auto;
+  font-weight: bold;
 }
