--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -8,7 +8,7 @@ body {
 footer {
     background-color: #fff1e8;
     color: #000000;
-    padding: 0 20px 23px 20px;
+    padding: 0 20px 0 20px;
     text-align: left;
     height: 237px;
 }
