--- a/src/Components/OrderProduct/OrderProduct.css
+++ b/src/Components/OrderProduct/OrderProduct.css
@@ -19,7 +19,7 @@
 
 .order-form {
   border: 1px solid #ccc;
-  padding: 20px;
+  padding: 20px 20px 12px 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -38,9 +38,13 @@
 }
 
 .product-image img {
-  max-width: 100%;
   height: auto;
   border-radius: 5px;
+  min-width: 472px;
+  max-width: 472px;
+  min-height: 476px;
+  max-height: 476px;
+  object-fit: cover;
 }
 
 .order-info {
