--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -92,8 +92,8 @@
 
 .dropdown {
   position: absolute;
-  top: 60px; /* Adjust this value as needed */
-  left: 1200px; /* Adjust this value as needed */
+  top: 60px;
+  left: 1150px;
   background-color: white;
   border: 1px solid #ccc;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
