--- a/src/Components/HomePage/HomePage.css
+++ b/src/Components/HomePage/HomePage.css
@@ -4,6 +4,12 @@
     background-color: #ffffff;
 }
 
+.swiper-backface-hidden .swiper-slide {
+    transform: translateZ(0);
+    backface-visibility: hidden;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
 .swiper-slide img {
     width: 290px;
     height: 300px;
@@ -120,7 +126,7 @@
 
   .img-container{
     width: 100%;
-    height: 400px;
+    height: 300px;
     overflow: hidden;
   }
 
