--- a/src/Components/ProductDetail/ProductDetail.css
+++ b/src/Components/ProductDetail/ProductDetail.css
@@ -30,7 +30,23 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 40%; /* Adjusted to fit within the container */
+  max-width: 40%;
+  height: 550px;
+  overflow: hidden;
+}
+.img-postproduct-content{
+  overflow: hidden;
+  object-fit: cover;
+  height: 100000px;
+}
+
+.img-postproduct{
+  transition: transform 0.6s ease;
+  object-fit: cover;
+}
+
+.img-postproduct:hover{
+  transform: scale(1.1);
 }
 
 .product-images span{
