--- a/src/Components/LoginSignUp/LoginSignup.css
+++ b/src/Components/LoginSignUp/LoginSignup.css
@@ -21,7 +21,7 @@
     align-items: center;
     gap: 9px;
     width: 100%;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 .text {
@@ -223,10 +223,9 @@
 .login-page-google-button {
   background-color: #fff;
   color: #000;
-  border: 0.5px solid #000;
+  border: 0.1px solid #000;
   border-radius: 25px;
   padding: 10px 20px;
-  cursor: pointer;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -234,10 +233,7 @@
   height: 50px;
   margin : auto;
   font-weight: bold;
-}
-
-.login-page-google-button:hover {
-  background-color: red;  
+  margin-top: 20px;
 }
 
 .login-page-form-button  {
@@ -253,4 +249,8 @@
   height: 50px;
   margin : auto;
   font-weight: bold;
+}
+
+.login-form {
+  margin-top: 20px;
 }
