--- a/src/Components/ProductDetail/ProductDetail.css
+++ b/src/Components/ProductDetail/ProductDetail.css
@@ -37,7 +37,8 @@
 .img-postproduct-content{
   overflow: hidden;
   object-fit: cover;
-  height: 100000px;
+  height: 10000px;
+  width: 470px;
 }
 
 .img-postproduct{
@@ -149,7 +150,7 @@
 
 .thumbnail img {
   width: 100%;
-  height: auto;
+  height: 80px;
   object-fit: cover;
 }
 
@@ -255,10 +256,12 @@
   display: flex;
   justify-content: center;
   margin-top: 10px;
+  height: auto;
+  margin-bottom: 30px;
 }
 
 .thumbnail {
-  width: 70px;
+  width: 100px;
   height: 70px;
   margin: 0 5px;
   cursor: pointer;
