--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -146,12 +146,15 @@
   align-items: center;
   justify-content: space-between;
   height: fit-content;
+  cursor: pointer;
 }
 
 .img-container-profile{
-    width: 100%;
-    height: 400px;
+    width: 330px;
+    height: 275px;
+    object-fit: cover;
     transition: transform 0.6s ease;
+    
 
 }
 
