--- a/src/Components/UploadImage/UploadImage.css
+++ b/src/Components/UploadImage/UploadImage.css
@@ -1,64 +1,79 @@
-/* UploadImage.css */
 .upload-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 600px;
-    height: 400px;
-    border: 2px dashed orange;
-    position: relative;
-    margin: 40px 10px 0 auto;
-    background-color: #f9f9f9;
-    border-radius: 10px;
-  }
-  
-  .upload-label {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-  }
-  
-  .upload-placeholder {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    pointer-events: none;
-  }
-  
-  .upload-label input[type="file"] {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    cursor: pointer;
-  }
-  
-  .icon-info {
-    color: #007bff;
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-  
-  .icon-camera {
-    color: orange;
-    font-size: 48px;
-    margin-bottom: 10px;
-    margin-right: 10px;
-  }
-  
-  .upload-text {
-    color: gray;
-    font-size: 14px;
-  }
-  
-  .selected-image {
-    width: 200px; 
-    height: 200px;
-    object-fit: cover;
-    border-radius: 10px;
-    flex-grow: 1; 
-    margin: 5px;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 700px;
+  height: 470px;
+  border: 2px dashed orange;
+  position: relative;
+  margin: 40px 10px 0 auto;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.upload-label {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.upload-placeholder {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  pointer-events: none;
+  object-fit: cover;
+}
+
+.upload-label input[type="file"] {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.icon-info {
+  color: #007bff;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.icon-camera {
+  color: orange;
+  font-size: 48px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
+
+.upload-text {
+  color: gray;
+  font-size: 14px;
+}
+
+.selected-image {
+  width: 300px; 
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin: 5px;
+}
+
+.clear-images-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.clear-images-button:hover {
+  background-color: darkred;
+}
