--- a/src/Components/OrderPage/OrderPage.css
+++ b/src/Components/OrderPage/OrderPage.css
@@ -7,11 +7,17 @@
   .order-page-content {
     width: 80%;
     margin: 87px auto 20px auto;
-    text-align: center;
     background-color: #ffffff;
+    border-radius: 10px; /* Bo tròn góc */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
   }
   
-  .ant-table-wrapper {
+  .orderpage-form {
     margin-top: 20px;
+    border-radius: 10px; /* Bo tròn góc */
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #e8e8e8;
   }
   
