--- a/src/Components/OrderPage/OrderPage.css
+++ b/src/Components/OrderPage/OrderPage.css
@@ -1,23 +1,27 @@
 .orderpage {
-    display: flex;
-    flex-direction: column;
-    background-color: #f5f5fa;
-  }
-  
-  .order-page-content {
-    width: 80%;
-    margin: 87px auto 20px auto;
-    background-color: #ffffff;
-    border-radius: 10px; /* Bo tròn góc */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-  }
-  
-  .orderpage-form {
-    margin-top: 20px;
-    border-radius: 10px; /* Bo tròn góc */
-    padding: 20px;
-    background-color: #fff;
-    border: 1px solid #e8e8e8;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  background-color: #f5f5fa;
+}
+
+.orderpage-content {
+  width: 80%;
+  margin: 87px auto 20px auto;
+  background-color: #ffffff;
+  border-radius: 10px; /* Bo tròn góc */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+
+.status-filter {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.orderpage-form {
+  border-radius: 10px; /* Bo tròn góc */
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #e8e8e8;
+}
