--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -6,18 +6,20 @@
     width: 10% !important;
     z-index: 100;
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-    background-color: white !important;
+    background-color: rgb(218, 141, 54) !important;
 }
 
 .Sidebar button {
     text-align: left;
     margin-top: 20%;
     margin-right: 70%;
+    
     background-color: #b2baf4;
 }
 
 .menu {
     height: 100%;
+    background-color: rgb(218, 141, 54) !important;
 }
 
 .sidebar_menu_item {
