--- a/src/Components/OrderPage/OrderPage.css
+++ b/src/Components/OrderPage/OrderPage.css
@@ -1,14 +1,13 @@
 .orderpage {
   display: flex;
   flex-direction: column;
-  background-color: #f5f5fa;
 }
 
 .orderpage-content {
   width: 80%;
   margin: 87px auto 20px auto;
   background-color: #ffffff;
-  border-radius: 10px; /* Bo tròn góc */
+  border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
 }
@@ -19,9 +18,77 @@
   margin-bottom: 20px;
 }
 
+.status-filter span {
+  font-weight: bold;
+}
+
 .orderpage-form {
-  border-radius: 10px; /* Bo tròn góc */
+  border-radius: 10px;
   padding: 20px;
-  background-color: #fff;
-  border: 1px solid #e8e8e8;
+  background-color: #fffaf0;
+  border: 1px solid #ff8c00;
+}
+
+.ant-table {
+  border: none !important;
+}
+
+.ant-table-container table > thead > tr > th,
+.ant-table-container table > tbody > tr > td {
+  border: none !important;
+}
+
+.ant-table-thead > tr > th {
+  background-color: #f0f0f0; /* Màu nền đầu bảng xám nhạt */
+  color: #000; /* Màu chữ đen */
+  font-weight: bold; /* Chữ in đậm */
+  padding: 8px; /* Khoảng cách padding */
+  text-align: left; /* Căn trái */
+}
+
+.ant-table-tbody > tr > td {
+  background-color: #ffffff; /* Màu nền ô bảng trắng */
+  color: #000; /* Màu chữ đen */
+  padding: 8px; /* Khoảng cách padding */
+  border-bottom: 1px solid #e8e8e8; /* Đường viền dưới của mỗi ô */
+  text-align: left; /* Căn trái */
+}
+
+.ant-table-tbody > tr:hover > td {
+  background-color: #f5f5f5; /* Màu nền khi hover */
+}
+
+.ant-btn {
+  background-color: #e0e0e0 !important; /* Màu nền nút xám nhạt */
+  color: #000 !important; /* Màu chữ đen */
+  border: 1px solid #d0d0d0 !important; /* Đường viền nút */
+  padding: 4px 12px; /* Khoảng cách padding */
+  border-radius: 4px; /* Bo góc nút */
+  text-align: center; /* Căn giữa chữ */
+}
+
+.ant-select-selector {
+  background-color: #ff8c00 !important; 
+  font-weight: bold;
+  color: #fff !important; 
+  border: none !important;
+}
+
+.ant-select-dropdown {
+  background-color: #fffaf0 !important; 
+}
+
+.ant-select-item {
+  color: #000000 !important; 
+}
+
+.ant-btn {
+  background-color: #ff8c00 !important; 
+  color: #fff !important; 
+  border: none !important;
+}
+
+.orderpage-content h2 {
+  text-align: center;
+  color: #ff8c00; 
 }
