--- a/src/Components/HomePage/HomePage.css
+++ b/src/Components/HomePage/HomePage.css
@@ -8,6 +8,7 @@
     transform: translateZ(0);
     backface-visibility: hidden;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 12px;
 }
 
 .swiper-slide img {
