--- a/src/Components/ProductByCategory/ProductByCategory.css
+++ b/src/Components/ProductByCategory/ProductByCategory.css
@@ -1,8 +1,13 @@
+.search-results {
+    min-height: 625px;
+    background-color: #ffffff;;
+    margin-top: 67px;
+  }
 .title-notfound-category{
-    margin-bottom: 260px;
     font-weight: bold;
     text-align: center;
+    padding-top: 250px;
     vertical-align: middle;
+    font-size: 20px;
     line-height: 1.5;
-    margin-top: 170px;
 }
