add user and product ban

--- a/src/Components/Financial/financialList.component.css
+++ b/src/Components/Financial/financialList.component.css
@@ -55,3 +55,15 @@
 .antd_table_financial{
     background: #f7ce2b;
 }
+
+.status-pending {
+    color: orange;
+}
+
+.status-approve {
+    color: green;
+}
+
+.status-reject {
+    color: red;
+}
