--- a/src/Components/OrderPage/OrderPage.css
+++ b/src/Components/OrderPage/OrderPage.css
@@ -95,3 +95,32 @@
   text-align: center;
   color: #ff8c00; 
 }
+
+/* styles.css hoặc file CSS tương ứng */
+.overlay {
+  background-color: rgba(0, 0, 0, 0.5); /* Màu đen với độ trong suốt 50% */
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1000; /* Đảm bảo lớp phủ nằm trên các phần tử khác */
+}
+
+.modal-orderpage {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 400px; /* Bạn có thể điều chỉnh kích thước tùy ý */
+  z-index: 1001; /* Đảm bảo modal nằm trên lớp phủ */
+}
+
+.sent-rating-order:hover{
+  background-color: #ecae63;
+}
+
+
