--- a/src/Components/ChatPage/ChatPage.css
+++ b/src/Components/ChatPage/ChatPage.css
@@ -8,7 +8,7 @@
     border-right: 3px solid rgb(255, 170, 1);
     padding: 0 10px;
     overflow-y: auto;
-    width: 30%;
+    width: 27%;
     height: 100%;
 }
 .list-group-chat .item {
@@ -16,7 +16,7 @@
     border-radius: 10px;
     display: flex;
     align-items: center;
-    height: 100px;
+    height: 80px;
     padding: 0 10px;
     margin-bottom: 10px;
     margin-top: 21px;
@@ -31,13 +31,13 @@
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    padding-right: 20px;
 }
 .list-group-chat .item .image img {
     border-radius: 50%;
-    width: 100%;
-    height: 100%;
+    width: 60px;
+    height: 60px;
     object-fit: fill;
+    margin-top: 10px;
 }
 .list-group-chat .item .group-name-content {
     text-align: start;
